--- a/Android_Studio/app/src/main/AndroidManifest.xml
+++ b/Android_Studio/app/src/main/AndroidManifest.xml
@@ -23,24 +23,13 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Numbux">
+            android:theme="@style/Theme.Numbux"
+            android:windowSoftInputMode="stateAlwaysVisible">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <!-- BLOCK OVERLAY ACTIVITY -->
-        <activity
-            android:name=".OverlayBlocker"
-            android:exported="false"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:excludeFromRecents="true"
-            android:taskAffinity=""
-            android:launchMode="singleInstance"
-            android:showWhenLocked="true"
-            android:turnScreenOn="true"
-            android:screenOrientation="portrait" />
 
         <!-- ACCESSIBILITY SERVICE -->
         <service
