--- a/Android_Studio/app/src/main/AndroidManifest.xml
+++ b/Android_Studio/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Numbux"
-            android:windowSoftInputMode="stateAlwaysVisible">
+            android:windowSoftInputMode="stateVisible|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
